(all) HPO init, job descriptors, remove unused endpoints
